# ChakLoad-CLI

./: README.md  pyproject.toml  requirements.txt
chakload_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
loadtester/: __main__.py  cli.py  config.py
loadtester/frameworks/: __init__.py  base.py  enhanced_runner.py  k6_runner.py  locust_runner.py  simple_runner.py
loadtester/templates/: __init__.py
loadtester/ui/: menus.py  progress.py  themes.py
loadtester/utils/: logger.py
loadtester_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/locust/: api_endpoint.py  telegram_webhook.py  web_site.py
